# taller-1-sesion-1

./: .env.example  GUIA_TALLER.md  README.md  graph.py  main.py  pyproject.toml  state.py
.devcontainer/: devcontainer.json
nodes/: researcher.py  reviewer.py  writer.py
utils/: llm.py
